# django_mini_be14

./:  .pre-commit-config.yaml  .dev.env  .example.env  .gitmessage.txt  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: checks.yml
accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_account_bank_code_account_created_at_and_more.py  0002_initial.py  0003_remove_account_user.py
analysis/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
analysis/migrations/: 0001_initial.py  0002_analysis_is_active_analysis_last_run_at_and_more.py
core/: celery.py  settings.py  urls.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
my-react-app/: index.html  package-lock.json  package.json
my-react-app/src/: App.jsx  index.css  main.jsx
my-react-app/src/api/: client.js
my-react-app/src/components/: AccountList.jsx  TransactionList.jsx
my-react-app/src/components/accounts/: AccountForm.jsx  AccountList.jsx
my-react-app/src/components/analysis/: AnalysisForm.jsx  AnalysisList.jsx  AnalysisResultPanel.jsx
my-react-app/src/components/auth/: LoginForm.jsx  SignupForm.jsx
my-react-app/src/components/transactions/: TransactionForm.jsx  TransactionList.jsx
my-react-app/src/context/: AuthContext.jsx
my-react-app/src/pages/: AccountsPage.jsx  AnalysisPage.jsx  LoginPage.jsx  SignupPage.jsx  TransactionDetailPage.jsx  TransactionsPage.jsx
notifications/: models.py  permissions.py  serializers.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_initial.py
transactions/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_delete_accounts.py  0002_transaction_delete_transactions.py
user/: admin.py  models.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name_and_more.py  0003_alter_user_is_active.py
user/utils/: jwt_serializers.py  signup_serializers.py
